log
Sat, Apr 19, 2025 11:05:27 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025 11:07:15 PM: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9b0818d
Sat, Apr 19, 2025 11:09:47 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
6fc98a3
Sat, Apr 19, 2025 11:13:29 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:10: error: unused variable 'nueva_cap' [-Werror=unused-variable]
     long nueva_cap  = capacidad_antigua * 2;
          ^~~~~~~~~
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
0cba65d
Sat, Apr 19, 2025 11:13:33 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:60:23: error: 'capacidad_antigua' undeclared (first use in this function)
     long nueva_cap  = capacidad_antigua * 2;
                       ^~~~~~~~~~~~~~~~~
hashmap.c:60:23: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:10: error: unused variable 'nueva_cap' [-Werror=unused-variable]
     long nueva_cap  = capacidad_antigua * 2;
          ^~~~~~~~~
hashmap.c:58:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
hashmap.c:57:10: error: unused variable 'cap_antigua' [-Werror=unused-variable]
     long cap_antigua  = map->capacity;
          ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
b2e2844
